tests/sksl/errors/ArrayOfVoid.glsl
### Compilation failed:

error: 1: type 'void' may not be used in an array
error: 2: type 'void' may not be used in an array
error: 4: type 'void' may not be used in an array
error: 4: function 'funcF' can exit without returning a value
error: 5: type 'void' may not be used in an array
error: 6: type 'void' may not be used in an array
error: 7: type 'void' may not be used in an array
7 errors
